<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PickMenu"
    android:background="@drawable/ic_pick_menu_page">

    <ImageButton
        android:id="@+id/home_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="322dp"
        android:layout_marginRight="322dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/ic_homebutton"
        android:contentDescription="@string/homebutton" />

    <ImageButton
        android:id="@+id/services_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="173dp"
        android:layout_marginRight="173dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/ic_servicesbutton"
        android:contentDescription="@string/services_button" />

    <ImageButton
        android:id="@+id/book_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="54dp"
        android:layout_marginRight="54dp"
        android:layout_marginBottom="6dp"
        android:background="@drawable/ic_bookbutton"
        android:contentDescription="@string/book_button" />

    <ImageButton
        android:id="@+id/tuns_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="234dp"
        android:layout_marginRight="234dp"
        android:layout_marginBottom="337dp"
        android:background="@drawable/ic_tuns"
        android:contentDescription="@string/tuns_button" />

    <ImageButton
        android:id="@+id/barbierit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="337dp"
        android:background="@drawable/ic_barbierit"
        android:contentDescription="@string/tuns_button" />

    <ImageButton
        android:id="@+id/spalat_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="228dp"
        android:layout_marginRight="228dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/ic_spalat"
        android:contentDescription="@string/tuns_button" />

    <ImageButton
        android:id="@+id/tuns_barba_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="21dp"
        android:layout_marginBottom="139dp"
        android:background="@drawable/ic_tuns_barba"
        android:contentDescription="@string/tuns_button" />

</RelativeLayout>